fixed layout issue with ul-tag on announcements

--- a/app/assets/stylesheets/announcements.css.scss
+++ b/app/assets/stylesheets/announcements.css.scss
@@ -51,6 +51,10 @@ article * p {
   margin: 0px;
 }
 
+article ul {
+  display: table;
+}
+
 article * td {
   vertical-align: top
 }
